@@ -437,13 +437,13 @@ public abstract class Node implements Cloneable {
 
     protected void addChildren(int index, Node... children) {
         Validate.noNullElements(children);
+        ensureChildNodes();
         for (int i = children.length - 1; i >= 0; i--) {
             Node in = children[i];
             reparentChild(in);
-            ensureChildNodes();
             childNodes.add(index, in);
+            reindexChildren(index);
         }
-        reindexChildren(index);
     }
 
     protected void ensureChildNodes() {
